--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -600,6 +600,7 @@ img {
 }
 .about__img {
   justify-self: center;
+  margin-top: -2rem;
 }
 
 .second__text,
@@ -670,10 +671,10 @@ img {
 
 .projects__name {
   margin: 15px 0 7px;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: var(--first-color);
-  font-family: 'Comfortaa', sans-serif;
-  font-weight: 200;
+  font-family:'Righteous', sans-serif;
+  font-weight: 100;
 }
 
 .projects__box:hover .projects__image {
