--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -252,7 +252,6 @@ img {
 
 .l-header {
   width: 100%;
-  /* max-width: 2000px; */
   position: fixed;
   top: 0;
   left: 0;
@@ -267,7 +266,7 @@ img {
 .nav__logo {
   font-size: 30px;
   font-family:'Righteous', sans-serif;
-  margin-top: 20px;
+  padding-top: 10px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -304,10 +303,10 @@ img {
   }
 }
 
-/* .nav__item {
+.nav__item {
   margin-bottom: var(--mb-4);
   font-family: Arial, Helvetica, sans-serif;
-} */
+}
 
 .nav__item:hover {
   color: #0000ff;
